--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- This is favicon link -->
     <link rel="icon" type="image/x-icon" href="../assets/fav.ico">                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            
-   <!--          This for fontawesone cdn         -->
+   <!--           This for fontawesone cdn         -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <!--         This for animate .css cdn                -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -37,11 +37,13 @@
           <div class="btn-1">
              <button>
             <a href="./home.html">
-              <span class="lets  animate__animated animate__rubberBand animate__infinite "> 
-                Lets</span>
+              <span class="lets"> 
+               <i class="lets"> Lets</i></span>
+               <span>
                 <i class="fa-brands fa-golang fa-3x animate__animated animate__rubberBand animate__infinite animate__delay-1s" >
 
                 </i>
+              </span>
             </a>
             </button>
           </div>
